1999-09-20  Yoshiki Hayashi <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-scroll-up-entitiy,
	mime-preview-scroll-down-entity): Use scroll-up and scroll-down
	instead of forward-line.
	(mime-preview-next-line-entity,
	mime-preview-previous-line-entity): Add optional argument LINES
	and scroll LINES lines if specified. Add doc-string.


1999-09-13  MORIOKA Tomohiko  <tomo@m17n.org>

	* SEMI: Version 1.13.6 (Komatsu) released.

1999-08-30  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Encode `mime-edit-version'.

1999-08-28  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-store-message/partial-piece): Use
	`directory-files' to check number of pieces.

1999-08-26  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-store-message/partial-piece): Don't refer
	`mime-preview-buffer'.

1999-08-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* SEMI-CFG: Use `if' instead of `when'.

1999-08-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-original-major-mode): Modify the way
	of checking for the end of the buffer.

1999-08-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-original-major-mode): Don't use
	`get-text-property' at the end of the buffer.

1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-preview-follow-current-entity):
	Don't use `mime-entity-buffer'.

1999-07-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-pgp.el (mime-view-application/pgp): Don't set the values of
	`mime-raw-buffer' and `mime-mother-buffer' in the preview buffer.

1999-07-29  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-play-entity): Get media-type from situation
	instead of entity; display prompt and call `mime-save-content' if
	method is not found.
	(mime-detect-content): Call `mime-play-entity' even if media-type
	specification is not found in `mime-magic-type-alist'.

1999-07-28  Katsumi Yamaoka   <yamaoka@jpl.org>
